# simsim

./: .gitignore  CMakeLists.txt  README.md  README.txt  build.sh  components.h  ed.h  gui.h  imgui.ini  layout.ini  main.cpp  matrix.h  shader.h
libs/imgui/: CMakeLists.txt
libs/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp
libs/implot/: CMakeLists.txt  implot_internal.h
textures/components/: coupled inductors.png~  inductor.png~  operational amplifier.png~  voltage controlled current source.png~  voltage controlled voltage source.png~
